--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ngx-translate/core": "^16.0.4",
     "chart.js": "^4.5.0",
     "file-saver": "^2.0.5",
+    "moment": "^2.30.1",
     "primeng": "^17.18.15",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
